--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: scf_dev 
+name: scf_dev
 channels:
   - bioconda
   - conda-forge
@@ -10,9 +10,9 @@ dependencies:
   - attrs=19.3.0=py_0
   - backcall=0.1.0=py_0
   - bleach=3.1.1=py_0
-  - ca-certificates=2019.11.28=hecc5488_0
+  - ca-certificates=2020.4.5.1=hecc5488_0
   - cairo=1.16.0=hfb77d84_1002
-  - certifi=2019.11.28=py38_0
+  - certifi=2020.4.5.1=py38h32f6830_0
   - cycler=0.10.0=py_2
   - dbus=1.13.6=he372182_0
   - decorator=4.4.1=py_0
@@ -40,7 +40,12 @@ dependencies:
   - json5=0.9.0=py_0
   - jsonschema=3.2.0=py38_0
   - jupyter_client=5.3.4=py38_1
+  - jupyter_contrib_core=0.3.3=py_2
+  - jupyter_contrib_nbextensions=0.5.1=py38_0
   - jupyter_core=4.6.3=py38_0
+  - jupyter_highlight_selected_word=0.2.0=py38_1000
+  - jupyter_latex_envs=1.4.6=py38_1000
+  - jupyter_nbextensions_configurator=0.4.1=py38_0
   - jupyterlab=1.2.6=py_0
   - jupyterlab_server=1.0.6=py_0
   - kiwisolver=1.1.0=py38hc9558a2_0
@@ -64,8 +69,10 @@ dependencies:
   - libxcb=1.13=h14c3975_1002
   - libxkbcommon=0.10.0=he1b5a44_0
   - libxml2=2.9.10=hee79883_0
+  - libxslt=1.1.33=h31b3aaa_0
   - llvm-openmp=9.0.1=hc9558a2_2
   - llvmlite=0.31.0=py38h8b12597_0
+  - lxml=4.5.0=py38hbb43d70_1
   - markupsafe=1.1.1=py38h516909a_0
   - matplotlib=3.1.3=py38_0
   - matplotlib-base=3.1.3=py38h250f245_0
@@ -78,7 +85,7 @@ dependencies:
   - nss=3.47=he751ad9_0
   - numba=0.48.0=py38hb3f55d8_0
   - numpy=1.18.1=py38h95a1406_0
-  - openssl=1.1.1d=h516909a_0
+  - openssl=1.1.1g=h516909a_0
   - pandas=1.0.1=py38hb3f55d8_0
   - pandoc=2.9.2=0
   - pandocfilters=1.4.2=py_1
@@ -101,7 +108,9 @@ dependencies:
   - python=3.8.1=h357f687_2
   - python-dateutil=2.8.1=py_0
   - python-igraph=0.8.0=py38h9e3b1fc_0
+  - python_abi=3.8=1_cp38
   - pytz=2019.3=py_0
+  - pyyaml=5.3.1=py38h1e0a361_0
   - pyzmq=18.1.1=py38h1768529_0
   - qt=5.12.5=hd8c4c69_1
   - readline=8.0=hf8c457e_0
@@ -135,6 +144,7 @@ dependencies:
   - xorg-xextproto=7.3.0=h14c3975_1002
   - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.4=h14c3975_1001
+  - yaml=0.2.4=h516909a_0
   - zeromq=4.3.2=he1b5a44_2
   - zipp=3.0.0=py_0
   - zlib=1.2.11=h516909a_1006
